--- a/URLProjection/build.gradle
+++ b/URLProjection/build.gradle
@@ -29,30 +29,30 @@ repositories {
 dependencies {
 
     //GRPC and Protobuf
-    compile "com.google.protobuf:protobuf-java:3.11.4"
-    compile group: 'io.grpc', name: 'grpc-all', version: '1.29.0'
-    compile 'javax.annotation:javax.annotation-api:1.3.2'
+    implementation "com.google.protobuf:protobuf-java:3.11.4"
+    implementation group: 'io.grpc', name: 'grpc-all', version: '1.29.0'
+    implementation 'javax.annotation:javax.annotation-api:1.3.2'
 
     //Protobuf Dependencies
     protobuf 'name.benjaminabbitt:evented-proto:0.0.5'
     protobuf 'name.benjaminabbitt:evented-bookmarks-proto:0.0.2'
-    compile 'name.benjaminabbitt:evented-java:0.0.2'
+    implementation 'name.benjaminabbitt:evented-java:0.0.2'
 
     //Logging
-    compile group: 'org.apache.logging.log4j', name: 'log4j-api', version: '2.13.2'
-    compile group: 'org.apache.logging.log4j', name: 'log4j-core', version: '2.13.2'
-    compile 'org.apache.logging.log4j:log4j-slf4j-impl:2.11.2'
-    compile group: 'com.fasterxml.jackson.core', name: 'jackson-core', version: '2.9.9'
-    compile 'com.fasterxml.jackson.dataformat:jackson-dataformat-yaml:2.8.7'
-    compile 'com.fasterxml.jackson.core:jackson-databind:2.8.7'
+    implementation group: 'org.apache.logging.log4j', name: 'log4j-api', version: '2.13.2'
+    implementation group: 'org.apache.logging.log4j', name: 'log4j-core', version: '2.13.2'
+    implementation 'org.apache.logging.log4j:log4j-slf4j-impl:2.11.2'
+    implementation group: 'com.fasterxml.jackson.core', name: 'jackson-core', version: '2.9.9'
+    implementation 'com.fasterxml.jackson.dataformat:jackson-dataformat-yaml:2.8.7'
+    implementation 'com.fasterxml.jackson.core:jackson-databind:2.8.7'
 
     //Configuration
-    compile group: "org.cfg4j", name: "cfg4j-core", version: "4.4.0"
-    compile group: "org.cfg4j", name: "cfg4j-consul", version: "4.4.0"
+    implementation group: "org.cfg4j", name: "cfg4j-core", version: "4.4.0"
+    implementation group: "org.cfg4j", name: "cfg4j-consul", version: "4.4.0"
 
     //Unit Testing
-    testCompile 'org.mockito:mockito-core:3.3.3'
-    testCompile group: 'junit', name: 'junit', version: '4.12'
+    testImplementation 'org.mockito:mockito-core:3.3.3'
+    testImplementation group: 'junit', name: 'junit', version: '4.12'
 
     //BDD
     testImplementation 'io.cucumber:cucumber-java8:5.6.0'
@@ -60,7 +60,7 @@ dependencies {
     testImplementation 'io.cucumber:cucumber-java:5.6.0'
 
     //Project Into
-    compile group: 'org.mongodb', name: 'mongo-java-driver', version: '3.12.3'
+    implementation group: 'org.mongodb', name: 'mongo-java-driver', version: '3.12.3'
 
 }
 
@@ -103,7 +103,7 @@ task cucumber() {
     }
 }
 
-compileJava {options.encoding = "UTF-8"}
+compileJava { options.encoding = "UTF-8" }
 
 java {
     sourceCompatibility(JavaVersion.VERSION_11)
