--- a/URLProto/build.gradle
+++ b/URLProto/build.gradle
@@ -26,9 +26,9 @@ repositories {
 
 dependencies {
     protobuf 'name.benjaminabbitt:evented-proto:0.0.5'
-    compile 'javax.annotation:javax.annotation-api:1.3.2'
-    compile "com.google.protobuf:protobuf-java:3.11.4"
-    compile group: 'io.grpc', name: 'grpc-all', version: '1.29.0'
+    implementation 'javax.annotation:javax.annotation-api:1.3.2'
+    implementation "com.google.protobuf:protobuf-java:3.11.4"
+    implementation group: 'io.grpc', name: 'grpc-all', version: '1.29.0'
 }
 
 group = "name.benjaminabbitt"
