--- a/CommandSender/build.gradle
+++ b/CommandSender/build.gradle
@@ -10,6 +10,11 @@ mainClassName = 'Client'
 dependencies {
     testImplementation group: 'junit', name: 'junit', version: '4.12'
     implementation project(":Proto")
+    implementation project(":Evented")
     implementation "com.google.protobuf:protobuf-java:3.11.4"
     implementation group: 'io.grpc', name: 'grpc-all', version: '1.29.0'
+    //Tracing
+    implementation 'io.opentracing.contrib:opentracing-grpc:0.2.1'
+    implementation 'io.jaegertracing:jaeger-core:1.2.0'
+    implementation 'io.jaegertracing:jaeger-client:1.2.0'
 }
