--- a/Evented/build.gradle
+++ b/Evented/build.gradle
@@ -1,15 +1,15 @@
 plugins {
     id 'java'
-    id 'application'
 }
 
-group 'name.benjaminAbbitt'
-version '0.0.0-SNAPSHOT'
+version 'unspecified'
 
-mainClassName = 'BusinessLogic.BookmarkServer'
+repositories {
+    mavenCentral()
+}
 
 dependencies {
-    testImplementation group: 'junit', name: 'junit', version: '4.12'
+    testCompile group: 'junit', name: 'junit', version: '4.12'
 
     //GRPC and Protobuf
     implementation "com.google.protobuf:protobuf-java:3.11.4"
@@ -17,7 +17,6 @@ dependencies {
     implementation 'javax.annotation:javax.annotation-api:1.3.2'
 
     implementation project(":Proto")
-    implementation project(":Evented")
 
     //Logging
     implementation group: 'org.apache.logging.log4j', name: 'log4j-api', version: '2.13.2'
@@ -38,6 +37,4 @@ dependencies {
 
     implementation group: "org.cfg4j", name: "cfg4j-core", version: "4.4.0"
     implementation group: "org.cfg4j", name: "cfg4j-consul", version: "4.4.0"
-
 }
-
