--- a/Business/build.gradle
+++ b/Business/build.gradle
@@ -1,12 +1,13 @@
 plugins {
     id 'java'
     id 'application'
+    id 'com.github.johnrengelman.shadow' version '5.2.0'
 }
 
 group 'name.benjaminAbbitt'
 version '0.0.0-SNAPSHOT'
 
-mainClassName = 'BusinessLogic.BookmarkServer'
+mainClassName = 'name.benjaminabbitt.evented.Business'
 
 dependencies {
     testImplementation group: 'junit', name: 'junit', version: '4.12'
@@ -38,6 +39,10 @@ dependencies {
 
     implementation group: "org.cfg4j", name: "cfg4j-core", version: "4.4.0"
     implementation group: "org.cfg4j", name: "cfg4j-consul", version: "4.4.0"
-
 }
 
+shadowJar {
+    baseName = 'app'
+    classifier = ''
+    archiveVersion = ''
+}
