--- a/build.gradle
+++ b/build.gradle
@@ -23,8 +23,8 @@ subprojects {
     }
 
     java {
-        sourceCompatibility(JavaVersion.VERSION_1_8)
-        targetCompatibility(JavaVersion.VERSION_1_8)
+        sourceCompatibility(JavaVersion.VERSION_11)
+        targetCompatibility(JavaVersion.VERSION_11)
     }
 
     compileJava { options.encoding = "UTF-8" }
