--- a/Evented/build.gradle
+++ b/Evented/build.gradle
@@ -1,5 +1,5 @@
 plugins {
-    id 'java'
+    id "org.jetbrains.kotlin.jvm"
 }
 
 version 'unspecified'
@@ -15,7 +15,6 @@ dependencies {
     implementation "com.google.protobuf:protobuf-java:3.11.4"
     implementation group: 'io.grpc', name: 'grpc-all', version: '1.29.0'
     implementation 'javax.annotation:javax.annotation-api:1.3.2'
-
     implementation project(":Proto")
 
     //Logging
@@ -30,5 +29,8 @@ dependencies {
     implementation 'io.opentracing.contrib:opentracing-grpc:0.2.1'
     implementation 'io.jaegertracing:jaeger-core:1.2.0'
     implementation 'io.jaegertracing:jaeger-client:1.2.0'
+
+    //Configuration
+    implementation("com.ecwid.consul:consul-api:1.4.5")
 
 }
