--- a/Projection/build.gradle
+++ b/Projection/build.gradle
@@ -2,6 +2,7 @@ plugins {
     id 'java'
     id 'application'
     id 'com.github.johnrengelman.shadow' version '5.2.0'
+    id 'org.jetbrains.kotlin.jvm'
 }
 
 group 'name.benjaminAbbitt'
@@ -16,7 +17,7 @@ dependencies {
     implementation 'javax.annotation:javax.annotation-api:1.3.2'
 
     implementation project(":Proto")
-    implementation 'name.benjaminabbitt:evented-java:0.0.2'
+    implementation project(":Evented")
 
     //Logging
     implementation group: 'org.apache.logging.log4j', name: 'log4j-api', version: '2.13.2'
@@ -41,6 +42,7 @@ dependencies {
 
     //Project Into
     implementation group: 'org.mongodb', name: 'mongo-java-driver', version: '3.12.3'
+    implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk8"
 
 }
 
@@ -69,5 +71,18 @@ shadowJar {
     baseName = 'app'
     classifier = ''
     archiveVersion = ''
+}
+repositories {
+    mavenCentral()
+}
+compileKotlin {
+    kotlinOptions {
+        jvmTarget = "1.8"
+    }
+}
+compileTestKotlin {
+    kotlinOptions {
+        jvmTarget = "1.8"
+    }
 }
 
