--- a/build.gradle
+++ b/build.gradle
@@ -1,6 +1,7 @@
 plugins {
     id 'idea'
     id 'java'
+    id 'org.jetbrains.kotlin.jvm' version '1.4.10'
 }
 
 repositories {
@@ -28,5 +29,18 @@ subprojects {
     }
 
     compileJava { options.encoding = "UTF-8" }
+}
+dependencies {
+    implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk8"
+}
+compileKotlin {
+    kotlinOptions {
+        jvmTarget = "1.8"
+    }
+}
+compileTestKotlin {
+    kotlinOptions {
+        jvmTarget = "1.8"
+    }
 }
 
