moved package names.  Fixed docker tag in build.gradle

--- a/BusinessLogic/Dockerfile
+++ b/BusinessLogic/Dockerfile
@@ -4,6 +4,8 @@ FROM openjdk:14-alpine
 RUN wget -qO/bin/grpc_health_probe https://github.com/grpc-ecosystem/grpc-health-probe/releases/download/v0.3.3/grpc_health_probe-linux-amd64 && \
     chmod +x /bin/grpc_health_probe
 
-COPY BusinessLogic-*-all.jar BusinessLogic.jar
+ADD app.tar /
+COPY * ./tmp/
+
 EXPOSE 1747
-CMD ["java", "-Dcom.sun.management.jmxremote", "-Xmx128m", "-jar", "BusinessLogic.jar"]
+CMD ["sh", "/app/bin/BusinessLogic"]
