--- a/BusinessLogic/build.gradle
+++ b/BusinessLogic/build.gradle
@@ -1,7 +1,6 @@
 plugins {
     id "org.jetbrains.kotlin.jvm"
     id "net.ltgt.apt-eclipse" version "0.21"
-    id "com.github.johnrengelman.shadow" version "6.1.0"
     id "application"
     id "com.google.protobuf" version "0.8.10"
     id "com.palantir.docker" version "0.25.0"
@@ -9,12 +8,13 @@ plugins {
 }
 
 version "0.0.0-SNAPSHOT"
-group "name.benjaminabbitt.wwwwwh.url"
+group "name.benjaminabbitt.wwwwwh.where.url"
 
 ext {
     protocVersion = "3.5.1"
     grpcVersion = "1.18.0"
     cucumberVersion = "6.8.0"
+    log4j2Version = "2.14.0"
 }
 
 repositories {
@@ -41,9 +41,10 @@ dependencies {
     runtimeOnly("io.jaegertracing:jaeger-thrift")
     implementation("io.micronaut.configuration:micronaut-mongo-reactive")
     implementation("io.micronaut:micronaut-security-jwt")
-    implementation("org.apache.logging.log4j:log4j-core:2.12.1")
-    runtimeOnly("org.apache.logging.log4j:log4j-api:2.12.1")
-    runtimeOnly("org.apache.logging.log4j:log4j-slf4j-impl:2.12.1")
+    implementation("org.apache.logging.log4j:log4j-core:$log4j2Version")
+    implementation("org.apache.logging.log4j:log4j-api:$log4j2Version")
+    //compile("org.apache.logging.log4j:log4j-slf4j-impl:$log4j2Version")
+    //compile("org.apache.logging.log4j:log4j-to-slf4j:$log4j2Version")
     testAnnotationProcessor(enforcedPlatform("io.micronaut:micronaut-bom:$micronautVersion"))
     testAnnotationProcessor("io.micronaut:micronaut-inject-java")
     testImplementation(enforcedPlatform("io.micronaut:micronaut-bom:$micronautVersion"))
@@ -57,7 +58,6 @@ dependencies {
     implementation project(":Evented")
     implementation("io.micronaut.grpc:micronaut-grpc-server-runtime:2.0.0.M3")
     implementation("io.grpc:grpc-services:1.30.2")
-    implementation group: 'org.apache.logging.log4j', name: 'log4j-core', version: '2.14.0'
     implementation "com.ecwid.consul:consul-api:1.4.5"
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk8"
 
@@ -80,9 +80,8 @@ tasks.withType(JavaCompile) {
     options.compilerArgs.add('-parameters')
 }
 
-shadowJar {
-    minimize()
-    mergeServiceFiles()
+application {
+    setMainClassName("${group}.Application")
 }
 
 tasks.withType(JavaExec) {
@@ -91,11 +90,15 @@ tasks.withType(JavaExec) {
 }
 
 docker {
-    name 'url-businesslogic'
-    files tasks.shadowJar.outputs
+    //name "${project.group.toLowerCase()}/${jar.archiveBaseName.toLowerCase()}:${version.toLowerCase()}"
+    dependsOn distTar
+    files tasks.distTar.outputs
+    name "${group.toLowerCase()}:${version.toLowerCase()}"
 }
 
-tasks.docker.dependsOn(shadowJar)
+distTar {
+    archiveFileName = "app.tar"
+}
 
 sourceSets {
     main {
@@ -115,11 +118,13 @@ protobuf {
         all()*.plugins { grpc {} }
     }
 }
+
 compileKotlin {
     kotlinOptions {
         jvmTarget = "1.8"
     }
 }
+
 compileTestKotlin {
     kotlinOptions {
         jvmTarget = "1.8"
