--- a/Evented/build.gradle
+++ b/Evented/build.gradle
@@ -18,12 +18,12 @@ dependencies {
     implementation project(":Proto")
 
     //Logging
-    implementation group: 'org.apache.logging.log4j', name: 'log4j-api', version: '2.13.2'
-    implementation group: 'org.apache.logging.log4j', name: 'log4j-core', version: '2.13.2'
-    implementation 'org.apache.logging.log4j:log4j-slf4j-impl:2.11.2'
-    implementation group: 'com.fasterxml.jackson.core', name: 'jackson-core', version: '2.9.9'
-    implementation 'com.fasterxml.jackson.dataformat:jackson-dataformat-yaml:2.8.7'
-    implementation 'com.fasterxml.jackson.core:jackson-databind:2.8.7'
+    api group: 'org.apache.logging.log4j', name: 'log4j-api', version: '2.13.2'
+    api group: 'org.apache.logging.log4j', name: 'log4j-core', version: '2.13.2'
+    api 'org.apache.logging.log4j:log4j-slf4j-impl:2.11.2'
+    api group: 'com.fasterxml.jackson.core', name: 'jackson-core', version: '2.9.9'
+    api 'com.fasterxml.jackson.dataformat:jackson-dataformat-yaml:2.8.7'
+    api 'com.fasterxml.jackson.core:jackson-databind:2.8.7'
 
     //Tracing
     implementation 'io.opentracing.contrib:opentracing-grpc:0.2.1'
@@ -31,6 +31,6 @@ dependencies {
     implementation 'io.jaegertracing:jaeger-client:1.2.0'
 
     //Configuration
-    implementation("com.ecwid.consul:consul-api:1.4.5")
+    api "com.ecwid.consul:consul-api:1.4.5"
 
 }
